fixed text shadows for more legibility/changed bg

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -13,13 +13,12 @@
 
 body {
     font-family: Georgia, 'Times New Roman', Times, serif;
-    background: linear-gradient(115deg, var(--secondary-color), var(--primary-color) 60%, var(--accent-color));
+    background: linear-gradient(145deg, var(--accent-color), var(--primary-color) 15%, var(--secondary-color), var(--primary-color) 80%, var(--accent-color));
 }
 
 /* Styling for the header */
 
 header {
-    /* padding: 1rem; */
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -30,8 +29,8 @@ header {
 header h1 {
     text-align: center;
     font-weight: bold; 
-    font-size: 5vw;
-    text-shadow: 2px 2px 2px rgba(255, 255, 255, 0.5); 
+    font-size: 6vw;
+    text-shadow: 1px 0 2px rgba(255, 255, 255, 0.4); 
     margin: 2vw 0 0;
     padding: 0;
     flex: 2 1 80%;
@@ -41,7 +40,7 @@ header h1 {
 header a {
     color: black;
     text-decoration: none;
-    text-shadow: 2px 2px 3px var(--link-color);
+    text-shadow: 0 0 1px var(--link-color);
 }
 
 .nav-bar {
@@ -55,7 +54,6 @@ header a {
     flex-wrap: wrap;
     gap: 3rem;
     font-weight: 350;
-    text-shadow: 2px 2px 3px rgba(255, 255, 255, 0.3);
     border-top: 2px solid black;
     border-bottom: 1px solid black;
 }
@@ -88,8 +86,8 @@ header a {
 .about-container img {
     width: 15%;
     border-radius: 5px;
-    border: 2px solid black;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, .8);
+    border: 1px solid black;
+    box-shadow: 2px 2px 3px rgba(255, 255, 255, .3);
 }
 
 .about-container p {
@@ -111,7 +109,7 @@ header a {
     font-weight: bold; 
     font-size: 3vw;
     text-align: center;
-    text-shadow: 2px 2px 2px rgba(255, 255, 255, 0.3); 
+    text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.3); 
     margin: 0;
     padding: 2% 0;
     flex: 2 1 100%;
@@ -136,7 +134,7 @@ header a {
 .article-container a {
     color: black;
     text-decoration: none;
-    text-shadow: 2px 2px 3px var(--link-color);
+    text-shadow: 0 0 1px var(--link-color);
 }
 
 .article-container a:hover{
@@ -153,7 +151,7 @@ header a {
 
 .article-container img {
     width: 80%;
-    border: 2px outset var(--secondary-color);
+    border: 1px solid var(--secondary-color);
     border-radius: 5px;
     box-shadow: 5px 5px 10px rgba(255, 255, 255, 0.3);
     opacity: 60%;
